# pc-webrtc-m2m

./: README.md
connector/: ProxyPlugin.vcxproj  ProxyPlugin.vcxproj.filters  ProxyReceiver.vcxproj  ProxyReceiver.vcxproj.filters  ProxySender.vcxproj  ProxySender.vcxproj.filters  README.md  WebRTCConnector.sln  audio_buffer.hpp  buffer.hpp  cpp.hint  data_parser.hpp  log.cpp  log.h  packet_data.hpp  plugin.cpp  plugin.h  proxy_receiver.cpp  proxy_sender.cpp  proxy_sender.h  received_tile.hpp
mdc_encoder/: CMakeLists.txt  README.md
mdc_encoder/include/: artificical_capturer.hpp  artificical_frame.hpp  capturer.hpp  description.h  draco_mdc_encoder.hpp  encoding_queue.hpp  frame.hpp  framework.h  log.h  plugin.h  point_cloud.h  point_cloud_data.h  rs2_frame.hpp  uniform_sampler.hpp
mdc_encoder/src/: artificical_capturer.cpp  artificical_frame.cpp  draco_mdc_decoder.cpp  encoding_queue.cpp  framebuffer.cpp  log.cpp  plugin.cpp  rs2_capturer.cpp  rs2_frame.cpp  uniform_sampler.cpp
point_cloud_capturer/: CMakeLists.txt  README.md
point_cloud_capturer/include/: description.h  draco_mdc_decoder.hpp  frame.hpp  framebuffer.hpp  framework.h  point_cloud.h  point_cloud.hpp  rs2_capturer.hpp  threadpool.h  uniform_sampler.hpp
point_cloud_capturer/src/: CMakeLists.txt  draco_mdc_encoder.cpp  encoding_queue.cpp  frame.cpp  plugin.cpp  rs2_capturer.cpp  threadpool.cpp  uniform_sampler.cpp
unity/spirit_audio/.cache/: {ea77e695-8ece-48ae-9e50-d9689b3cf326}.pdc
unity/spirit_audio/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
unity/spirit_audio/Metadata/AudioFile/: {ea77e695-8ece-48ae-9e50-d9689b3cf326}.xml
unity/spirit_audio/Metadata/Bank/: {b265fd73-fbf9-4866-8b1a-7cd6700fdef5}.xml
unity/spirit_audio/Metadata/BankFolder/: {17e22fe4-898d-4fd3-a1ce-35b94ac89a2d}.xml
unity/spirit_audio/Metadata/EffectPresetFolder/: {0cf55d5e-af2d-47fc-8dc3-25e970475867}.xml
unity/spirit_audio/Metadata/EncodingSetting/: {c778b007-2012-4d2d-a8e7-f7daca61c4ff}.xml
unity/spirit_audio/Metadata/Event/: {1a6c5d0b-53cb-4824-9d7c-ae1d60c54699}.xml  {2a8a2401-4e51-49f3-97f9-47e0ed2ba09d}.xml
unity/spirit_audio/Metadata/EventFolder/: {a91d12ce-d295-49a2-96c5-345c3a6487f7}.xml
unity/spirit_audio/Metadata/ParameterPresetFolder/: {4c993e90-0c79-497e-9cfd-8d120c80c46a}.xml
unity/spirit_audio/Metadata/Platform/: {8a390a8e-b32c-407c-a090-fb9b274cb307}.xml
unity/spirit_audio/Metadata/ProfilerFolder/: {b834d2f8-601e-4627-8097-a76c5f4a0590}.xml
unity/spirit_audio/Metadata/Return/: {859bc1a5-50f0-451c-9e0d-e97954655d98}.xml
unity/spirit_audio/Metadata/SandboxFolder/: {20d3ff06-9379-450b-a233-01790d090aa0}.xml
unity/spirit_audio/Metadata/SnapshotGroup/: {aaa9075d-bd02-412b-b42f-59c8f490f1be}.xml
unity/spirit_m2m_webrtc/: .gitignore  README.md
unity/spirit_m2m_webrtc/Assets/: Native.cs
unity/spirit_m2m_webrtc/Assets/Materials/: SPIRIT_logo_rgb_color-2048x956.mat  mmsys-logo.mat
unity/spirit_m2m_webrtc/Assets/Plugins/: SharpDLLTest.deps.json
unity/spirit_m2m_webrtc/Assets/Prefabs/: AudioCapture.prefab  AudioPlayback.prefab  PCReceiver.prefab  PCReceiverWithAudio.prefab  PCSelf.prefab  PCSelfWithAudio.prefab
unity/spirit_m2m_webrtc/Assets/Scenes/: MainScene.unity
unity/spirit_m2m_webrtc/Assets/Scripts/: AudioCapture.cs  AudioNetworkTest.cs  AudioPlayback.cs  AudioPlaybackBuffer.cs  AudioSample.cs  AudioSelf.cs  CapturingTest.cs  CapturingTestMulti.cs  DecodedPointCloudData.cs  DracoInvoker.cs  DracoWrapper.cs  FMODMicrophoneStream.cs  JSONTest.cs  MicTest.cs  PCDecodeWrapper.cs  PCReceiver.cs  PCSelf.cs  Realsense2Invoker.cs  ScriptUsageRecordMicrophone.cs  SessionInfo.cs  SessionManager.cs  SessionManagerAudioTest.cs  WebRTCInvoker.cs  mic_in.cs
unity/spirit_m2m_webrtc/Assets/Shaders/: PC_HQ.mat  PC_LQ.mat  PC_MQ.mat  PC_ULQ.mat  (+1 more)
unity/spirit_m2m_webrtc/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
webrtc/: README.md  go.mod  go.sum  test.csv  test2.csv
webrtc/dashboard/: index.html  temp.html
webrtc/dashboard/static/: styles.css
webrtc/peer/: main.go  proxy_connection.go  result_writer.go  transcoder.go
webrtc/peer/debug_config_example/: dbg_config.json  high.csv  low.csv  medium.csv
webrtc/sfu/: main.go
(+52 files in other folders)
